// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetModal snapshot(Draw) 1`] = `
<div
  className="sc-guDLRT eRIqgP"
>
  <div
    className="sc-dmyDGi gSsOMi"
  >
    <p
      className="sc-hLQRIN eNckTq"
    >
      Game Result
    </p>
    <p
      className="sc-eDLJxc ikMfYs"
    >
      Draw!
    </p>
    <button
      className="sc-beySbM MUICB"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 1) 1`] = `
<div
  className="sc-guDLRT eRIqgP"
>
  <div
    className="sc-dmyDGi gSsOMi"
  >
    <p
      className="sc-hLQRIN eNckTq"
    >
      Game Result
    </p>
    <p
      className="sc-eDLJxc ikMfYs"
    >
      Player 1 win!
    </p>
    <button
      className="sc-beySbM MUICB"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;

exports[`resetModal snapshot(Player 2) 1`] = `
<div
  className="sc-guDLRT eRIqgP"
>
  <div
    className="sc-dmyDGi gSsOMi"
  >
    <p
      className="sc-hLQRIN eNckTq"
    >
      Game Result
    </p>
    <p
      className="sc-eDLJxc ikMfYs"
    >
      Player 2 win!
    </p>
    <button
      className="sc-beySbM MUICB"
      data-cy="reset"
      onClick={[Function]}
      type="submit"
    >
      Game Reset
    </button>
  </div>
</div>
`;
